--- a/notebooks/cis/_cis_hazard_intersection.qmd
+++ b/notebooks/cis/_cis_hazard_intersection.qmd
@@ -164,7 +164,7 @@ s2ProcessedData = {
   // Admin0 selected, no admin1 - show all admin1 data for selected countries
   else if (selectedAdmin1.length === 0) {
     filtered = filtered.filter(d => 
-      selectedAdmin0.includes(d.admin0_name) && 
+      selectedAdmin0.includes(d.admin0_name) &&
       d.admin1_name != null && 
       d.admin2_name == null
     );
@@ -340,142 +340,394 @@ s2GeoData = {
 ```{ojs}
 //| echo: false
 
-// Bivariate legend - simplified and integrated styling
-s2Legend = {
-  const size = 45;
-  const gap = 2;
-  const classes = ["Low", "Moderate", "High"];
-  const totalWidth = size * 3 + gap * 2;
-  const totalHeight = size * 3 + gap * 2 + 50;
-  
-  return html`
-    <div style="margin-top: 20px; padding: 12px; background: #f8f9fa; border-radius: 4px; display: inline-block; font-family: system-ui, -apple-system, sans-serif;">
-      <svg width="${totalWidth + 100}" height="${totalHeight}">
-        <g transform="translate(0, 15)">
-          ${classes.flatMap((hazardClass, i) => 
-            classes.map((readinessClass, j) => {
-              const key = `${readinessClass} × ${classes[2 - i]}`; // Invert i for Y axis
-              const isPriority = readinessClass === "High" && classes[2 - i] === "High";
-              return svg`
-                <rect 
-                  x="${j * (size + gap)}" 
-                  y="${i * (size + gap)}"
-                  width="${size}" 
-                  height="${size}"
-                  fill="${bivariateColors[key]}"
-                  stroke="${isPriority ? '#000' : '#999'}"
-                  stroke-width="${isPriority ? '2.5' : '0.5'}"
-                />
-              `;
-            })
-          )}
-          <!-- Y-axis labels (Hazard Severity) - right side -->
-          <text x="${totalWidth + 8}" y="${size * 0.5 + 3}" font-size="10" fill="#333" font-weight="500">High</text>
-          <text x="${totalWidth + 8}" y="${size * 1.5 + gap + 3}" font-size="10" fill="#333" font-weight="500">Moderate</text>
-          <text x="${totalWidth + 8}" y="${size * 2.5 + gap * 2 + 3}" font-size="10" fill="#333" font-weight="500">Low</text>
-          
-          <!-- X-axis labels (CIS Readiness) - bottom -->
-          <text x="${size * 0.5}" y="${size * 3 + gap * 2 + 12}" font-size="10" text-anchor="middle" fill="#333" font-weight="500">Low</text>
-          <text x="${size * 1.5 + gap}" y="${size * 3 + gap * 2 + 12}" font-size="10" text-anchor="middle" fill="#333" font-weight="500">Moderate</text>
-          <text x="${size * 2.5 + gap * 2}" y="${size * 3 + gap * 2 + 12}" font-size="10" text-anchor="middle" fill="#333" font-weight="500">High</text>
-          
-          <!-- Axis titles -->
-          <text x="${totalWidth / 2}" y="${size * 3 + gap * 2 + 28}" font-size="11" text-anchor="middle" fill="#333" font-weight="600">CIS Readiness →</text>
-          <text x="${totalWidth + 50}" y="${size * 1.5 + gap}" font-size="11" fill="#333" font-weight="600" transform="rotate(90, ${totalWidth + 50}, ${size * 1.5 + gap})">Hazard Severity ↑</text>
-        </g>
-      </svg>
-    </div>
-  `;
-}
-```
+// Mutable state for clicked admin0 (for zoom interaction)
+mutable s2ClickedAdmin0 = null;
 
-```{ojs}
-//| echo: false
+// Prepare admin1 data for zoom (when at admin0 level)
+s2Admin1Data = {
+  if (s2CurrentAdminLevel !== 0) return [];
+  
+  // Get admin1 level data from processed data
+  const hazardColumn = s2HazardType === "drought" ? "drought_ndws" : "waterlogging_ndwl0";
+  const hazardTypeCode = s2HazardType === "drought" ? "NDWS-mean" : "NDWL0-mean";
+  
+  // Filter to admin1 level data
+  const admin1Data = s2ProcessedData.filter(d => 
+    d.admin1_name != null && 
+    d.admin2_name == null &&
+    d.cis_readiness_index >= s2ReadinessThreshold &&
+    d[hazardColumn] !== null
+  );
+  
+  // Group by admin1 and aggregate
+  const grouped = d3.group(admin1Data, d => d.gaul1_code);
+  return Array.from(grouped.values()).map(group => {
+    const first = group[0];
+    const avgReadiness = d3.mean(group, d => d.cis_readiness_index);
+    const avgHazard = d3.mean(group, d => d[hazardColumn]);
+    const classified = bivariateClassify(avgReadiness, avgHazard, cisReadinessCutoffs, hazardTypeCode);
+    
+    return {
+      admin0_name: first.admin0_name,
+      admin1_name: first.admin1_name,
+      iso3: first.iso3,
+      gaul0_code: first.gaul0_code,
+      gaul1_code: first.gaul1_code,
+      cis_readiness_index: avgReadiness,
+      hazardValue: avgHazard,
+      ...classified
+    };
+  });
+}
+
+// Create data index for quick lookup
+s2DataIndex = {
+  const index = new Map();
+  
+  // Index current level data
+  s2MapData.forEach(d => {
+    const admin0 = d.admin0_name;
+    const admin1 = d.admin1_name || null;
+    
+    if (!index.has(admin0)) {
+      index.set(admin0, new Map());
+    }
+    index.get(admin0).set(admin1, d);
+  });
+  
+  // Also index admin1 data for zoom
+  if (s2CurrentAdminLevel === 0) {
+    s2Admin1Data.forEach(d => {
+      const admin0 = d.admin0_name;
+      const admin1 = d.admin1_name;
+      
+      if (!index.has(admin0)) {
+        index.set(admin0, new Map());
+      }
+      index.get(admin0).set(admin1, d);
+    });
+  }
+  
+  return index;
+}
+
+// Render map or table based on toggle
+s2BivariateMap = {
+  if (s2ViewToggle !== "map") return null;
+  
+    const hazardName = s2HazardType === "drought" ? "Drought (Dry Spell Days)" : "Waterlogging (Days)";
+  const height = 610;
+  const width = 775;
+  const padding = 20;
+  
+  // Remove existing tooltip
+  d3.select(".bivariateTip").remove();
+  
+  const tooltip = d3
+    .select("body")
+    .append("div")
+    .attr("class", "plotTooltip bivariateTip")
+    .style("position", "absolute")
+    .style("opacity", 0)
+    .style("background", "rgba(0, 0, 0, 0.8)")
+    .style("color", "white")
+    .style("padding", "8px 12px")
+    .style("border-radius", "4px")
+    .style("font-size", "12px")
+    .style("pointer-events", "none")
+    .style("z-index", "1000");
+  
+  const projection = d3.geoMercator();
+  const geo_path = d3.geoPath().projection(projection);
+  const color = d3.scaleOrdinal()
+    .domain(["Low × Low", "Low × Moderate", "Low × High", "Moderate × Low", "Moderate × Moderate", "Moderate × High", "High × Low", "High × Moderate", "High × High"])
+    .range(Object.values(bivariateColors));
+  
+  // Get features and data based on current admin level and clicked state
+  let featuresToShow, dataToUse;
+  if (s2CurrentAdminLevel === 0 && s2ClickedAdmin0 !== null) {
+    // Show admin1 for clicked admin0
+    dataToUse = s2Admin1Data.filter(d => d.admin0_name === s2ClickedAdmin0);
+    
+    // Get admin1 boundaries for clicked country and join with data
+    const admin1Features = admin1Boundaries.features
+      .filter(f => f.properties.admin0_name === s2ClickedAdmin0)
+      .map(feature => {
+        const gaulCode = feature.properties.gaul1_code;
+        const match = dataToUse.find(d => d.gaul1_code === gaulCode);
+        
+        // Fallback: try matching by admin names
+        const dataMatch = match || dataToUse.find(d => 
+          d.admin0_name === feature.properties.admin0_name &&
+          d.admin1_name === feature.properties.admin1_name
+        );
+        
+        return {
+          type: "Feature",
+          geometry: feature.geometry,
+          properties: {
+            ...feature.properties,
+            ...(dataMatch || {}),
+            isHighlighted: false
+          }
+        };
+      })
+      .filter(f => f.properties.bivariateClass); // Only show features with data
+    
+    featuresToShow = {
+      type: "FeatureCollection",
+      features: admin1Features
+    };
+  } else {
+    // Show current level features
+    featuresToShow = s2GeoData;
+    dataToUse = s2MapData;
+  }
+  
+  // Create lookup map for current data (multiple keys for robustness)
+  const dataLookup = new Map();
+  dataToUse.forEach(d => {
+    // Primary key: GAUL code
+    const gaulKey = s2CurrentAdminLevel === 0 && s2ClickedAdmin0 !== null
+      ? d.gaul1_code
+      : s2CurrentAdminLevel === 0
+      ? d.gaul0_code
+      : s2CurrentAdminLevel === 1
+      ? d.gaul1_code
+      : d.gaul2_code;
+    dataLookup.set(gaulKey, d);
+    
+    // Secondary key: admin name combination (for fallback matching)
+    if (s2CurrentAdminLevel === 0 && s2ClickedAdmin0 !== null) {
+      const nameKey = `${d.admin0_name}_${d.admin1_name}`;
+      dataLookup.set(nameKey, d);
+    }
+  });
+  
+  // Fit projection to features
+  projection.fitExtent(
+    [
+      [padding, padding],
+      [width - padding, height - padding]
+    ],
+    featuresToShow
+  );
+  
+  // Adjust viewBox to accommodate rotated legend
+  const svg = d3
+    .create("svg")
+    .attr("viewBox", [0, 0, 900, 680])
+    .attr("style", "overflow: visible;")
+    .attr("title", "Bivariate Map")
+    .on("dblclick", () => {
+      mutable s2ClickedAdmin0 = null;
+    });
+  
+  // Render paths
+  const paths = svg
+    .append("g")
+    .selectAll("path")
+    .data(featuresToShow.features)
+    .join("path")
+    .attr("stroke", "white")
+    .attr("stroke-width", d => d.properties.isHighlighted ? "2.5px" : "1px")
+    .attr("class", s2CurrentAdminLevel === 0 && s2ClickedAdmin0 !== null ? "admin1-boundary" : "admin0-boundary")
+    .attr("fill", (d) => {
+      const gaulCodeField = s2CurrentAdminLevel === 0 && s2ClickedAdmin0 !== null
+        ? 'gaul1_code'
+        : s2CurrentAdminLevel === 0
+        ? 'gaul0_code'
+        : s2CurrentAdminLevel === 1
+        ? 'gaul1_code'
+        : 'gaul2_code';
+      
+      // Try GAUL code first
+      let dataEntry = dataLookup.get(d.properties[gaulCodeField]);
+      
+      // Fallback: try admin name combination
+      if (!dataEntry && s2CurrentAdminLevel === 0 && s2ClickedAdmin0 !== null) {
+        const nameKey = `${d.properties.admin0_name}_${d.properties.admin1_name}`;
+        dataEntry = dataLookup.get(nameKey);
+      }
+      
+      return dataEntry ? color(dataEntry.bivariateClass) : "#e8e8e8";
+    })
+    .attr("d", geo_path)
+    .on("click", (event, d) => {
+      if (s2CurrentAdminLevel === 0 && s2ClickedAdmin0 === null) {
+        mutable s2ClickedAdmin0 = d.properties.admin0_name;
+      }
+    });
+  
+  // Tooltip on mousemove
+  paths
+    .on("mousemove", (event, d) => {
+      const gaulCodeField = s2CurrentAdminLevel === 0 && s2ClickedAdmin0 !== null
+        ? 'gaul1_code'
+        : s2CurrentAdminLevel === 0
+        ? 'gaul0_code'
+        : s2CurrentAdminLevel === 1
+        ? 'gaul1_code'
+        : 'gaul2_code';
+      
+      // Try GAUL code first
+      let dataEntry = dataLookup.get(d.properties[gaulCodeField]);
+      
+      // Fallback: try admin name combination
+      if (!dataEntry && s2CurrentAdminLevel === 0 && s2ClickedAdmin0 !== null) {
+        const nameKey = `${d.properties.admin0_name}_${d.properties.admin1_name}`;
+        dataEntry = dataLookup.get(nameKey);
+      }
+      
+      if (!dataEntry) return;
+      
+      const regionName = s2CurrentAdminLevel === 0 && s2ClickedAdmin0 !== null
+        ? `${d.properties.admin1_name}, ${d.properties.admin0_name}`
+        : s2CurrentAdminLevel === 0
+              ? d.properties.admin0_name 
+              : s2CurrentAdminLevel === 1
+              ? `${d.properties.admin1_name}, ${d.properties.admin0_name}`
+              : `${d.properties.admin2_name}, ${d.properties.admin1_name}`;
+            
+      const readinessText = `CIS Readiness: ${dataEntry.cis_readiness_index.toFixed(2)} (${dataEntry.readinessClass})`;
+      const hazardText = `${hazardName}: ${dataEntry.hazardValue.toFixed(1)} (${dataEntry.hazardClass})`;
+      const categoryText = `Category: ${dataEntry.bivariateClass}`;
+      const priorityText = dataEntry.bivariateClass === "High × High" ? "🎯 PRIORITY ZONE" : "";
+      
+      tooltip
+        .style("top", event.pageY - 10 + "px")
+        .style("left", event.pageX + 10 + "px")
+        .style("opacity", 1)
+        .html(`${regionName}<br>${readinessText}<br>${hazardText}<br>${categoryText}${priorityText ? "<br><strong>" + priorityText + "</strong>" : ""}`);
+    })
+    .on("mouseout", function (event, d) {
+      tooltip.style("opacity", 0);
+    });
+  
+  // Add mesh/boundaries
+  const mesh = svg
+    .append("path")
+    .datum(featuresToShow)
+    .attr("fill", "none")
+    .attr("stroke", "black")
+    .attr("stroke-linejoin", "round")
+    .attr("d", geo_path);
+  
+  // Create legend tooltip (separate from map tooltip)
+  d3.select(".bivariateLegendTip").remove();
+  const legendTooltip = d3
+    .select("body")
+    .append("div")
+    .attr("class", "plotTooltip bivariateLegendTip")
+    .style("position", "absolute")
+    .style("opacity", 0)
+    .style("background", "rgba(0, 0, 0, 0.8)")
+    .style("color", "white")
+    .style("padding", "8px 12px")
+    .style("border-radius", "4px")
+    .style("font-size", "12px")
+    .style("pointer-events", "none")
+    .style("z-index", "1000");
+  
+  // Create bi_legend function (matching example pattern - diamond shape)
+  function bi_legend(selection) {
+    const size = 40;
+    const gap = 2;
+    const classes = ["Low", "Moderate", "High"];
+    const totalWidth = size * 3 + gap * 2;
+    const totalHeight = size * 3 + gap * 2;
+    const centerX = totalWidth / 2;
+    const centerY = totalHeight / 2;
+    
+    // Create inner group for the legend content (will be rotated)
+    const legendContent = selection.append("g");
+    
+    // Legend squares with hover tooltips
+    classes.forEach((hazardClass, i) => {
+      classes.forEach((readinessClass, j) => {
+        const key = `${readinessClass} × ${classes[2 - i]}`;
+        const isPriority = readinessClass === "High" && classes[2 - i] === "High";
+        
+        const rect = legendContent
+          .append("rect")
+          .attr("x", j * (size + gap))
+          .attr("y", i * (size + gap))
+          .attr("width", size)
+          .attr("height", size)
+          .attr("fill", bivariateColors[key])
+          .attr("stroke", isPriority ? "#000" : "#999")
+          .attr("stroke-width", isPriority ? "2.5" : "0.5")
+          .style("cursor", "pointer");
+        
+        // Add hover tooltip
+        rect
+          .on("mousemove", (event) => {
+            legendTooltip
+              .style("top", event.pageY - 10 + "px")
+              .style("left", event.pageX + 10 + "px")
+              .style("opacity", 1)
+              .html(`CIS Readiness: ${readinessClass}<br>Hazard Severity: ${classes[2 - i]}<br>Category: ${key}`);
+          })
+          .on("mouseout", () => {
+            legendTooltip.style("opacity", 0);
+          });
+      });
+    });
+    
+    // Rotate the entire legend 45 degrees to make it a diamond
+    legendContent.attr("transform", `rotate(45, ${centerX}, ${centerY})`);
+    
+    // Diagonal axis labels (positioned outside the rotated grid)
+    // CIS Readiness label (diagonal from bottom-left towards top-right)
+    const readinessLabelX = -35;
+    const readinessLabelY = totalHeight + 25;
+    selection
+      .append("text")
+      .attr("x", readinessLabelX)
+      .attr("y", readinessLabelY)
+      .attr("font-size", "11")
+      .attr("fill", "#333")
+      .attr("font-weight", "600")
+      .attr("transform", `rotate(-45, ${readinessLabelX}, ${readinessLabelY})`)
+      .text("CIS Readiness");
+    
+    // Hazard Severity label (diagonal from bottom-right towards top-left)
+    const hazardLabelX = totalWidth + 35;
+    const hazardLabelY = totalHeight + 25;
+    selection
+      .append("text")
+      .attr("x", hazardLabelX)
+      .attr("y", hazardLabelY)
+      .attr("font-size", "11")
+      .attr("fill", "#333")
+      .attr("font-weight", "600")
+      .attr("text-anchor", "end")
+      .attr("transform", `rotate(45, ${hazardLabelX}, ${hazardLabelY})`)
+      .text("Hazard Severity");
+    
+    return selection;
+  }
+  
+  // Add legend to SVG - positioned to avoid overflow
+  // Position it at bottom-left with enough space for the rotated diamond
+  const legendX = 20;
+  const legendY = height - 180;
+  const legendGroup = svg
+    .append("g")
+    .attr("transform", `translate(${legendX}, ${legendY})`);
+  
+  // Apply the legend function to the group using .call()
+  legendGroup.call(bi_legend);
+  
+  return svg.node();
+}
 
 // Render map or table based on toggle
 {
   if (s2ViewToggle === "map") {
-    const hazardName = s2HazardType === "drought" ? "Drought (Dry Spell Days)" : "Waterlogging (Days)";
-    
-    const map = Plot.plot({
-      width: 2000,
-      height: 1000,
-      projection: {
-        type: "mercator",
-        domain: s2GeoData
-      },
-      color: {
-        legend: false
-      },
-      marks: [
-        Plot.geo(s2GeoData.features, {
-          fill: d => bivariateColors[d.properties.bivariateClass],
-          stroke: d => d.properties.isHighlighted ? "#000" : "#333",
-          strokeWidth: d => d.properties.isHighlighted ? 2.5 : 0.5
-        }),
-        Plot.tip(
-          s2GeoData.features,
-          Plot.pointer(
-            Plot.centroid({
-              channels: {
-                region: {
-                  label: "Region",
-                  value: (d) => {
-                    if (s2CurrentAdminLevel === 0) {
-                      return d.properties.admin0_name;
-                    } else if (s2CurrentAdminLevel === 1) {
-                      return `${d.properties.admin1_name}, ${d.properties.admin0_name}`;
-                    } else {
-                      return `${d.properties.admin2_name}, ${d.properties.admin1_name}`;
-                    }
-                  }
-                },
-                cisReadiness: {
-                  label: "CIS Readiness",
-                  value: (d) => d.properties.cis_readiness_index
-                },
-                readinessClass: {
-                  label: "Readiness Class",
-                  value: (d) => d.properties.readinessClass
-                },
-                hazardValue: {
-                  label: hazardName,
-                  value: (d) => d.properties.hazardValue
-                },
-                hazardClass: {
-                  label: "Hazard Class",
-                  value: (d) => d.properties.hazardClass
-                },
-                category: {
-                  label: "Category",
-                  value: (d) => d.properties.bivariateClass
-                },
-                priority: {
-                  label: "Priority",
-                  value: (d) => d.properties.bivariateClass === "High × High" ? "🎯 PRIORITY ZONE" : ""
-                }
-              },
-              format: {
-                region: true,
-                cisReadiness: (d) => d != null ? d.toFixed(2) : "N/A",
-                readinessClass: true,
-                hazardValue: (d) => d != null ? d.toFixed(1) : "N/A",
-                hazardClass: true,
-                category: true,
-                priority: true
-              }
-            })
-          )
-        )
-      ]
-    });
-    
     yield html`
       <div>
-        ${map}
-        <div style="display: flex; justify-content: center; margin-top: 15px;">
-          ${s2Legend}
-        </div>
+        ${s2BivariateMap}
       </div>
     `;
   } else {
