Update tooltips to match Plot.tip pattern: Convert map and legend tooltips in Section 2 and Section 3 to use plot-tip class with table format, matching standard Plot.tip implementation used throughout the notebook

--- a/notebooks/cis/_cis_hazard_intersection.qmd
+++ b/notebooks/cis/_cis_hazard_intersection.qmd
@@ -423,17 +423,13 @@ s2BivariateMap = {
   // Remove existing tooltip
   d3.select(".bivariateTip").remove();
   
+  // Create tooltip matching Plot.tip style
   const tooltip = d3
     .select("body")
     .append("div")
-    .attr("class", "plotTooltip bivariateTip")
+    .attr("class", "plot-tip bivariateTip")
     .style("position", "absolute")
     .style("opacity", 0)
-    .style("background", "rgba(0, 0, 0, 0.8)")
-    .style("color", "white")
-    .style("padding", "8px 12px")
-    .style("border-radius", "4px")
-    .style("font-size", "12px")
     .style("pointer-events", "none")
     .style("z-index", "1000");
   
@@ -589,16 +585,24 @@ s2BivariateMap = {
               ? `${d.properties.admin1_name}, ${d.properties.admin0_name}`
               : `${d.properties.admin2_name}, ${d.properties.admin1_name}`;
             
-      const readinessText = `CIS Readiness: ${dataEntry.cis_readiness_index.toFixed(2)} (${dataEntry.readinessClass})`;
-      const hazardText = `${hazardName}: ${dataEntry.hazardValue.toFixed(1)} (${dataEntry.hazardClass})`;
-      const categoryText = `Category: ${dataEntry.bivariateClass}`;
-      const priorityText = dataEntry.bivariateClass === "High × High" ? "🎯 PRIORITY ZONE" : "";
+      // Format tooltip as table matching Plot.tip pattern
+      const tooltipHtml = `
+        <table>
+          <tr><th>Region</th><td>${regionName}</td></tr>
+          <tr><th>CIS Readiness</th><td>${dataEntry.cis_readiness_index != null ? dataEntry.cis_readiness_index.toFixed(2) : "N/A"}</td></tr>
+          <tr><th>Readiness Class</th><td>${dataEntry.readinessClass || "N/A"}</td></tr>
+          <tr><th>${hazardName}</th><td>${dataEntry.hazardValue != null ? dataEntry.hazardValue.toFixed(1) : "N/A"}</td></tr>
+          <tr><th>Hazard Class</th><td>${dataEntry.hazardClass || "N/A"}</td></tr>
+          <tr><th>Category</th><td>${dataEntry.bivariateClass || "N/A"}</td></tr>
+          ${dataEntry.bivariateClass === "High × High" ? `<tr><th>Priority</th><td>🎯 PRIORITY ZONE</td></tr>` : ""}
+        </table>
+      `;
       
       tooltip
         .style("top", event.pageY - 10 + "px")
         .style("left", event.pageX + 10 + "px")
         .style("opacity", 1)
-        .html(`${regionName}<br>${readinessText}<br>${hazardText}<br>${categoryText}${priorityText ? "<br><strong>" + priorityText + "</strong>" : ""}`);
+        .html(tooltipHtml);
     })
     .on("mouseout", function (event, d) {
       tooltip.style("opacity", 0);
@@ -613,19 +617,14 @@ s2BivariateMap = {
     .attr("stroke-linejoin", "round")
     .attr("d", geo_path);
   
-  // Create legend tooltip (separate from map tooltip)
+  // Create legend tooltip (separate from map tooltip) - matching Plot.tip style
   d3.select(".bivariateLegendTip").remove();
   const legendTooltip = d3
     .select("body")
     .append("div")
-    .attr("class", "plotTooltip bivariateLegendTip")
+    .attr("class", "plot-tip bivariateLegendTip")
     .style("position", "absolute")
     .style("opacity", 0)
-    .style("background", "rgba(0, 0, 0, 0.8)")
-    .style("color", "white")
-    .style("padding", "8px 12px")
-    .style("border-radius", "4px")
-    .style("font-size", "12px")
     .style("pointer-events", "none")
     .style("z-index", "1000");
   
@@ -659,14 +658,21 @@ s2BivariateMap = {
           .attr("stroke-width", isPriority ? "2.5" : "0.5")
           .style("cursor", "pointer");
         
-        // Add hover tooltip
+        // Add hover tooltip - matching Plot.tip pattern
         rect
           .on("mousemove", (event) => {
+            const tooltipHtml = `
+              <table>
+                <tr><th>CIS Readiness</th><td>${readinessClass}</td></tr>
+                <tr><th>Hazard Severity</th><td>${classes[2 - i]}</td></tr>
+                <tr><th>Category</th><td>${key}</td></tr>
+              </table>
+            `;
             legendTooltip
               .style("top", event.pageY - 10 + "px")
               .style("left", event.pageX + 10 + "px")
               .style("opacity", 1)
-              .html(`CIS Readiness: ${readinessClass}<br>Hazard Severity: ${classes[2 - i]}<br>Category: ${key}`);
+              .html(tooltipHtml);
           })
           .on("mouseout", () => {
             legendTooltip.style("opacity", 0);
