--- a/notebooks/cis/_cis_implementation.qmd
+++ b/notebooks/cis/_cis_implementation.qmd
@@ -427,17 +427,13 @@ s3BivariateMap = {
   // Remove existing tooltip
   d3.select(".s3BivariateTip").remove();
   
+  // Create tooltip matching Plot.tip style
   const tooltip = d3
     .select("body")
     .append("div")
-    .attr("class", "plotTooltip s3BivariateTip")
+    .attr("class", "plot-tip s3BivariateTip")
     .style("position", "absolute")
     .style("opacity", 0)
-    .style("background", "rgba(0, 0, 0, 0.8)")
-    .style("color", "white")
-    .style("padding", "8px 12px")
-    .style("border-radius", "4px")
-    .style("font-size", "12px")
     .style("pointer-events", "none")
     .style("z-index", "1000");
   
@@ -487,13 +483,26 @@ s3BivariateMap = {
       const access = d.properties.accessValue;
       const accessClass = d.properties.accessClass;
       const category = d.properties.bivariateClass;
-      const optimal = d.properties.bivariateClass === "High × High" ? `✓ ${_lang(cis.s3OptimalZone)}` : "";
+      const optimal = d.properties.bivariateClass === "High × High";
+      
+      // Format tooltip as table matching Plot.tip pattern
+      const tooltipHtml = `
+        <table>
+          <tr><th>Country</th><td>${country || "N/A"}</td></tr>
+          <tr><th>${_lang(cis.s3ReadinessLabel)}</th><td>${readiness != null ? readiness.toFixed(2) : "N/A"}</td></tr>
+          <tr><th>Readiness Class</th><td>${readinessClass || "N/A"}</td></tr>
+          <tr><th>${s3CurrentAccessLabel}</th><td>${access != null ? (access * 100).toFixed(1) + '%' : "N/A"}</td></tr>
+          <tr><th>Access Class</th><td>${accessClass || "N/A"}</td></tr>
+          <tr><th>Category</th><td>${category || "N/A"}</td></tr>
+          ${optimal ? `<tr><th>Optimal Zone</th><td>✓ ${_lang(cis.s3OptimalZone)}</td></tr>` : ""}
+        </table>
+      `;
       
       tooltip
         .style("top", event.pageY - 10 + "px")
         .style("left", event.pageX + 10 + "px")
         .style("opacity", 1)
-        .html(`${country}<br>${_lang(cis.s3ReadinessLabel)}: ${readiness != null ? readiness.toFixed(2) : "N/A"} (${readinessClass})<br>${s3CurrentAccessLabel}: ${access != null ? (access * 100).toFixed(1) + '%' : "N/A"} (${accessClass})<br>Category: ${category}${optimal ? "<br><strong>" + optimal + "</strong>" : ""}`);
+        .html(tooltipHtml);
     })
     .on("mouseout", () => {
       tooltip.style("opacity", 0);
@@ -508,19 +517,14 @@ s3BivariateMap = {
     .attr("stroke-linejoin", "round")
     .attr("d", geo_path);
   
-  // Create legend tooltip (separate from map tooltip)
+  // Create legend tooltip (separate from map tooltip) - matching Plot.tip style
   d3.select(".s3BivariateLegendTip").remove();
   const legendTooltip = d3
     .select("body")
     .append("div")
-    .attr("class", "plotTooltip s3BivariateLegendTip")
+    .attr("class", "plot-tip s3BivariateLegendTip")
     .style("position", "absolute")
     .style("opacity", 0)
-    .style("background", "rgba(0, 0, 0, 0.8)")
-    .style("color", "white")
-    .style("padding", "8px 12px")
-    .style("border-radius", "4px")
-    .style("font-size", "12px")
     .style("pointer-events", "none")
     .style("z-index", "1000");
   
@@ -554,14 +558,21 @@ s3BivariateMap = {
           .attr("stroke-width", isPriority ? "2.5" : "0.5")
           .style("cursor", "pointer");
         
-        // Add hover tooltip
+        // Add hover tooltip - matching Plot.tip pattern
         rect
           .on("mousemove", (event) => {
+            const tooltipHtml = `
+              <table>
+                <tr><th>${_lang(cis.s3ReadinessLabel)}</th><td>${readinessClass}</td></tr>
+                <tr><th>${s3CurrentAccessLabel}</th><td>${accessClass}</td></tr>
+                <tr><th>Category</th><td>${key}</td></tr>
+              </table>
+            `;
             legendTooltip
               .style("top", event.pageY - 10 + "px")
               .style("left", event.pageX + 10 + "px")
               .style("opacity", 1)
-              .html(`${_lang(cis.s3ReadinessLabel)}: ${readinessClass}<br>${s3CurrentAccessLabel}: ${accessClass}<br>Category: ${key}`);
+              .html(tooltipHtml);
           })
           .on("mouseout", () => {
             legendTooltip.style("opacity", 0);
