--- a/notebooks/cis/_cis_readiness_index.qmd
+++ b/notebooks/cis/_cis_readiness_index.qmd
@@ -178,7 +178,7 @@ viewof selectedAdmin0 = multiSelect({
   placeholderText: _lang(cis.admin0Placeholder),
   options: uniqueAdmin0.map(d => ({ value: d, label: d })),
   selected: [],
-  maxSelections: 5
+  maxSelections: 10
 })
 ```
 
@@ -191,7 +191,7 @@ viewof selectedAdmin1 = multiSelect({
   placeholderText: _lang(cis.admin1Placeholder),
   options: admin1Options.map(d => ({ value: d, label: d })),
   selected: [],
-  maxSelections: 5
+  maxSelections: 10
 })
 ```
 
@@ -204,7 +204,7 @@ viewof selectedAdmin2 = multiSelect({
   placeholderText: _lang(cis.admin2Placeholder),
   options: admin2Options.map(d => ({ value: d, label: d })),
   selected: [],
-  maxSelections: 5
+  maxSelections: 10
 })
 ```
 
@@ -953,174 +953,105 @@ s13Data = {
 // Section 1.3 Chart/Table
 {
   if (s13ViewType === "Chart") {
-    // Prepare data with delta for vertically stacked bars
-    const dataWithDelta = s13Data.map(d => {
-      const short = d.shortTerm != null ? parseFloat(d.shortTerm.toFixed(2)) : null;
-      const long = d.longTerm != null ? parseFloat(d.longTerm.toFixed(2)) : null;
-      // Delta = long - short (for the delta bar, negative means long < short)
-      const delta = (short != null && long != null) ? parseFloat((long - short).toFixed(2)) : null;
+    // Prepare data in the format expected by the chart
+    const data = s13Data.map(d => {
+      const short = d.shortTerm != null ? parseFloat(d.shortTerm) : null;
+      const long = d.longTerm != null ? parseFloat(d.longTerm) : null;
+      const delta = short != null && long != null ? long - short : null;
+      
+      // Calculate sort value based on selected sort mode
+      let sortValue = 0;
+      if (s13SortBy === "Short-term skill") {
+        sortValue = short || 0;
+      } else if (s13SortBy === "Long-term skill") {
+        sortValue = long || 0;
+      } else {
+        // Sort by absolute delta
+        sortValue = Math.abs(delta || 0);
+      }
+      
       return {
-        name: d.admin,
+        country: d.admin,
         short: short,
         long: long,
-        delta: delta
+        delta: delta,
+        sortValue: sortValue
       };
+    }).filter(d => d.short != null || d.long != null);
+    
+    // Sort data based on selected mode
+    const sorted = data.sort((a, b) => {
+      if (s13SortBy === "Short-term skill") {
+        return (b.short || 0) - (a.short || 0);
+      } else if (s13SortBy === "Long-term skill") {
+        return (b.long || 0) - (a.long || 0);
+      } else {
+        // Sort by absolute delta
+        const deltaA = Math.abs(a.delta || 0);
+        const deltaB = Math.abs(b.delta || 0);
+        return deltaB - deltaA;
+      }
     });
     
-    // Sort data based on selected mode (default = short-term skill descending)
-    const sortMode = s13SortBy === "Short-term skill" ? "short" : 
-                     s13SortBy === "Long-term skill" ? "long" : "delta";
-    
-    const sorted = (() => {
-      if (sortMode === "short") {
-        return dataWithDelta.sort((a, b) => (b.short || 0) - (a.short || 0));
-      } else if (sortMode === "long") {
-        return dataWithDelta.sort((a, b) => (b.long || 0) - (a.long || 0));
-      } else {
-        return dataWithDelta.sort((a, b) => {
-          const deltaA = (a.long || 0) - (a.short || 0);
-          const deltaB = (b.long || 0) - (b.short || 0);
-          return Math.abs(deltaB) - Math.abs(deltaA);
-        });
-      }
-    })();
-    
-    // Flatten data for vertical stacking: each country gets 3 rows in order (Delta on top, Long in middle, Short on bottom)
-    const stackedData = sorted.flatMap(d => [
-      { 
-        country: d.name, 
+    // Flatten data: each geography gets 3 entries (Short-term, Long-term, Delta)
+    const longData = sorted.flatMap((d) => [
+      {
+        country: d.country,
+        metric: "Short-term RPSS (1–2 mo)",
+        value: d.short
+      },
+      {
+        country: d.country,
+        metric: "Long-term RPSS (11–12 mo)",
+        value: d.long
+      },
+      {
+        country: d.country,
         metric: "Δ (Long − Short)",
-        label: `${d.name} | Δ`,
-        value: d.delta,
-        order: 0  // Top position
-      },
-      { 
-        country: d.name, 
-        metric: "Long-term RPSS (11-12 mo)",
-        label: `${d.name} | Long`,
-        value: d.long,
-        order: 1  // Middle position
-      },
-      { 
-        country: d.name, 
-        metric: "Short-term RPSS (1-2 mo)",
-        label: `${d.name} | Short`,
-        value: d.short,
-        order: 2  // Bottom position
+        value: d.delta
       }
-    ]);
+    ]).filter(d => d.value != null);
     
-    // Calculate responsive height - 3 bars per country (smaller bars to match wireframe)
-    const itemCount = sorted.length * 3;
-    const chartHeight = Math.max(500, itemCount * 12);  // Reduced from 18 to 12 for thinner bars
+    // Calculate responsive height based on number of geographies
+    const geographyCount = sorted.length;
+    const height = Math.max(500, geographyCount * 80);
     
-    const marginLeft = 150;
-    
-    // Calculate x-axis domain to accommodate negative delta values
-    const maxValue = Math.max(...sorted.map(d => Math.max(d.short || 0, d.long || 0)), 0.7);
-    const minDelta = Math.min(...sorted.map(d => d.delta || 0), -0.1);
-    const xMin = Math.min(minDelta, -0.1);
-    const xMax = Math.max(maxValue, 0.7);
-    
-    // Generate ticks for x-axis
-    const tickStep = 0.1;
-    const ticks = [];
-    for (let i = Math.ceil(xMin / tickStep) * tickStep; i <= xMax; i += tickStep) {
-      if (Math.abs(i) < 0.01) ticks.push(0);
-      else ticks.push(Math.round(i * 10) / 10);
-    }
-    
-    // Create y-axis domain maintaining the proper vertical order for each country
-    const yDomain = stackedData.map(d => d.label);
-    
-    const filteredStackedData = stackedData.filter(d => d.value != null);
+    // Get the ordered list of countries from sorted data
+    const countryOrder = sorted.map(d => d.country);
     
     return Plot.plot({
-      marginLeft: marginLeft,
-      marginTop: 40,
-      marginBottom: 60,
+      marginLeft: 100,
       width: 900,
-      height: chartHeight,
-      style: {
-        fontSize: "14px"  // Increase base font size for all text
-      },
-      x: {
-        label: "RPSS (0-1) or Δ",
-        labelAnchor: "center",
-        domain: [xMin, xMax],
-        ticks: ticks,
-        grid: true,
-        tickSize: 6,
-        fontSize: 14  // Larger tick labels
-      },
-      y: {
+      height: height,
+      y: { axis: null },
+      x: { grid: true },
+      fy: { 
+        padding: 0, 
         label: null,
-        domain: yDomain,
-        padding: 0.3,  // Increased from 0.15 to 0.3 for tighter bars
-        tickSize: 6,
-        fontSize: 13  // Larger y-axis labels (country names)
+        domain: countryOrder // Use pre-sorted order to maintain sort
       },
       color: {
-        legend: true,
-        domain: ["Short-term RPSS (1-2 mo)", "Long-term RPSS (11-12 mo)", "Δ (Long − Short)"],
-        range: ["#1f77b4", "#ff7f0e", "#808080"]
+        domain: [
+          "Short-term RPSS (1–2 mo)",
+          "Long-term RPSS (11–12 mo)",
+          "Δ (Long − Short)"
+        ],
+        range: ["#4477AA", "#EE6677", "#228833"],
+        legend: true
       },
       marks: [
-        // X-axis at top (without label)
-        Plot.axisX({ 
-          anchor: "top", 
-          label: null, 
-          ticks: ticks,
-          fontSize: 14,
-          tickSize: 6
+        Plot.barX(longData, {
+          x: "value",
+          y: "metric",
+          fill: "metric",
+          fy: "country",
+          sort: {
+            y: null,
+            color: null
+          },
+          tip: true
         }),
-        
-        // X-axis at bottom (with label) - this is the default
-        Plot.axisX({ 
-          anchor: "bottom", 
-          label: "RPSS (0-1) or Δ", 
-          ticks: ticks,
-          fontSize: 14,
-          tickSize: 6,
-          labelFontSize: 16  // Larger x-axis title
-        }),
-        
-        // Reference line at 0
-        Plot.ruleX([0], { stroke: "#333", strokeWidth: 1 }),
-        
-        // All bars stacked vertically, maintaining order
-        Plot.barX(filteredStackedData, {
-          x1: 0,
-          x2: "value",
-          y: "label",
-          fill: "metric"
-        }),
-        Plot.tip(
-          filteredStackedData,
-          Plot.pointer({
-            x: "value",
-            y: "label",
-            channels: {
-              country: {
-                label: "Country",
-                value: (d) => d.country
-              },
-              metric: {
-                label: "Metric",
-                value: (d) => d.metric
-              },
-              value: {
-                label: "Value",
-                value: (d) => d.value
-              }
-            },
-            format: {
-              country: true,
-              metric: true,
-              value: (d) => d != null ? d.toFixed(2) : "N/A"
-            }
-          })
-        )
+        Plot.ruleX([0], { stroke: "black" })
       ]
     });
   } else {
