Fix geography name truncation in Section 1.3 chart
- Increase left margin dynamically based on longest geography name
- Set minimum margin to 200px to prevent name cutoff
- Calculate margin as 8px per character for longer names

--- a/notebooks/cis/_cis_readiness_index.qmd
+++ b/notebooks/cis/_cis_readiness_index.qmd
@@ -1019,8 +1019,12 @@ s13Data = {
     // Get the ordered list of countries from sorted data
     const countryOrder = sorted.map(d => d.country);
     
+    // Calculate margin based on longest geography name
+    const maxNameLength = Math.max(...countryOrder.map(name => name.length), 0);
+    const marginLeft = Math.max(200, maxNameLength * 8); // At least 200px, or 8px per character
+    
     return Plot.plot({
-      marginLeft: 100,
+      marginLeft: marginLeft,
       width: 900,
       height: height,
       y: { axis: null },
