--- a/notebooks/cis/_cis_hazard_intersection.qmd
+++ b/notebooks/cis/_cis_hazard_intersection.qmd
@@ -134,11 +134,11 @@ viewof s2ReadinessThreshold = Inputs.range([0, 1], {
 });
 
 viewof s2ViewToggle = Inputs.radio(
-  ["map", "table"],
+  ["map", "table", "plot"],
   {
     label: _lang(cis.s2ViewToggle),
     value: "map",
-    format: d => d === "map" ? _lang(cis.s2ViewMap) : _lang(cis.s2ViewTable)
+    format: d => d === "map" ? _lang(cis.s2ViewMap) : d === "table" ? _lang(cis.s2ViewTable) : "Bivariate Plot"
   }
 );
 ```
@@ -422,6 +422,37 @@ s2BivariateMap = {
   
   // Remove existing tooltip
   d3.select(".bivariateTip").remove();
+  
+  // Add CSS to override large tooltip styles from Section 1.1
+  if (!d3.select("style#bivariateTipStyles").node()) {
+    d3.select("head").append("style")
+      .attr("id", "bivariateTipStyles")
+      .text(`
+        .bivariateTip {
+          font-size: 14px !important;
+          padding: 10px 12px !important;
+          line-height: 1.5 !important;
+          // min-width: 200px !important;
+          // max-width: 300px !important;
+        }
+        .bivariateTip table {
+          font-size: 14px !important;
+        }
+        .bivariateTip th,
+        .bivariateTip td {
+          padding: 4px 8px !important;
+          font-size: 14px !important;
+          line-height: 1.4 !important;
+        }
+        .bivariateTip th {
+          font-weight: 600 !important;
+          font-size: 14px !important;
+        }
+        .bivariateTip * {
+          font-size: 14px !important;
+        }
+      `);
+  }
   
   // Create tooltip matching Plot.tip style
   const tooltip = d3
@@ -728,7 +759,7 @@ s2BivariateMap = {
   return svg.node();
 }
 
-// Render map or table based on toggle
+// Render map, table, or plot based on toggle
 {
   if (s2ViewToggle === "map") {
     yield html`
@@ -736,6 +767,64 @@ s2BivariateMap = {
         ${s2BivariateMap}
       </div>
     `;
+  } else if (s2ViewToggle === "plot") {
+    // Bivariate plot
+    const hazardName = s2HazardType === "drought" ? "Drought (Dry Spell Days)" : "Waterlogging (Days)";
+    const hazardTypeCode = s2HazardType === "drought" ? "NDWS-mean" : "NDWL0-mean";
+    
+    // Prepare plot data
+    const plotData = s2MapData.map(d => ({
+      x: d.cis_readiness_index,
+      y: d.hazardValue,
+      bivariateClass: d.bivariateClass,
+      readinessClass: d.readinessClass,
+      hazardClass: d.hazardClass,
+      adminName: s2CurrentAdminLevel === 0 
+        ? d.admin0_name 
+        : s2CurrentAdminLevel === 1
+        ? `${d.admin1_name}, ${d.admin0_name}`
+        : `${d.admin2_name}, ${d.admin1_name}`
+    })).filter(d => d.x != null && d.y != null);
+    
+    // Get hazard cutoffs for reference lines
+    const hazardCutoffs = hazardTypeCode === "NDWS-mean" 
+      ? { low: 15, moderate: 20 }
+      : { low: 2, moderate: 5 };
+    
+    yield Plot.plot({
+      width: 900,
+      height: 600,
+      x: {
+        label: "CIS Readiness Index (0-1)",
+        domain: [0, 1],
+        grid: true
+      },
+      y: {
+        label: hazardName,
+        grid: true
+      },
+      color: {
+        domain: ["Low × Low", "Low × Moderate", "Low × High", "Moderate × Low", "Moderate × Moderate", "Moderate × High", "High × Low", "High × Moderate", "High × High"],
+        range: Object.values(bivariateColors),
+        legend: true
+      },
+      marks: [
+        // Reference lines for CIS Readiness cutoffs
+        Plot.ruleX([cisReadinessCutoffs.low], { stroke: "#666", strokeDasharray: "4,3", strokeWidth: 1 }),
+        Plot.ruleX([cisReadinessCutoffs.moderate], { stroke: "#666", strokeDasharray: "4,3", strokeWidth: 1 }),
+        // Reference lines for Hazard cutoffs
+        Plot.ruleY([hazardCutoffs.low], { stroke: "#666", strokeDasharray: "4,3", strokeWidth: 1 }),
+        Plot.ruleY([hazardCutoffs.moderate], { stroke: "#666", strokeDasharray: "4,3", strokeWidth: 1 }),
+        // Scatter points
+        Plot.dot(plotData, {
+          x: "x",
+          y: "y",
+          fill: "bivariateClass",
+          r: 4,
+          tip: true
+        })
+      ]
+    });
   } else {
     // Table view
     const hazardName = s2HazardType === "drought" ? "Drought (Days)" : "Waterlogging (Days)";
