Add x-axis at both top and bottom for Section 1.3 chart
- Set x.axis to 'top' to display axis at the top
- Add Plot.axisX with anchor 'bottom' to display axis at the bottom
- Add marginTop and marginBottom to accommodate both axes
- Both axes show label 'RPSS (0-1) or Δ'

--- a/notebooks/cis/_cis_readiness_index.qmd
+++ b/notebooks/cis/_cis_readiness_index.qmd
@@ -1025,10 +1025,16 @@ s13Data = {
     
     return Plot.plot({
       marginLeft: marginLeft,
+      marginTop: 40,
+      marginBottom: 60,
       width: 900,
       height: height,
       y: { axis: null },
-      x: { grid: true },
+      x: { 
+        grid: true,
+        axis: "top",
+        label: "RPSS (0-1) or Δ"
+      },
       fy: { 
         padding: 0, 
         label: null,
@@ -1044,6 +1050,11 @@ s13Data = {
         legend: true
       },
       marks: [
+        // X-axis at bottom
+        Plot.axisX({ 
+          anchor: "bottom", 
+          label: "RPSS (0-1) or Δ"
+        }),
         Plot.barX(longData, {
           x: "value",
           y: "metric",
